# immich-cli

./: .gitignore  CONTRIBUTING.md  MEMORY.md  Makefile  README.md  build_windows.py  files-to-copy.txt  gen-files.ps1  pyproject.toml
.github/workflows/: ci.yml
docs/: KNOWN_ISSUES.md  faces-experiment-report.md  windows-build.md
samples/: photo.meta.json
scripts/: check_people_cleared.py  pause_jobs.py  resume_jobs.py
src/immich_cli/: __init__.py  __main__.py  cli.py  client.py  logging_setup.py  meta_export.py  models.py  xmp.py
tests/: test_client.py  test_xmp.py
