[project]
name = "immich-cli"
version = "0.1.0"
description = "Standalone command-line tool to upload assets (with XMP metadata) to an Immich server over HTTPX."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
]

[project.scripts]
immich-cli = "immich_cli.cli:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.4.0",
    "mdformat>=0.7.17",
    "pymarkdownlnt>=0.9.38",
    "ruff>=0.15.12",
    "ty>=0.0.33",
    "nuitka[onefile]>=2.6.0",
    "pillow>=10.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["backend/"]

[tool.ruff.lint]
preview = true
select = [
    "E4", "E7", "E9", "W291", "F", "I", "D", "N", "UP",
    "PTH", "RUF", "B", "SIM", "LOG", "PT",
]
ignore = ["ANN204"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "D", "ANN", "T201", "ASYNC", "ARG", "PTH", "TRY"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.build-backend]
module-root = "src"

[tool.uv]
package = true

# Nuitka Windows build config. The actual compile runs on Windows (MSVC).
# `python build_windows.py` reads these via `python -m nuitka` automatically.
[tool.nuitka]
# Entry: package dir compiled with -m (runs immich_cli.__main__), output
# named immich-cli.exe. Mirrors build_windows.py. The entry package itself is
# not listed in include-package (it's given via the command-line path).
output-filename = "immich-cli"
python-flag = "-m"
include-package = ["click", "httpx", "httpcore", "certifi"]
include-package-data = ["certifi", "httpx"]
windows-console-mode = "force"
assume-yes-for-downloads = true
